syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/gateway/auth/pb";

service RoleService{
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse);
}

message GetRoleRequest{
  int64 id = 1;
}

message GetRoleResponse{
  int64 id = 1;
  string name = 2;
  optional string description = 3;
  int64 status = 4;
  string error = 5;
}

message GetRolesRequest{
}

message GetRolesResponse{
  repeated GetRoleResponse roles = 1;
  int64 status = 2;
  string error = 3;
}